--- a/client/index.html
+++ b/client/index.html
@@ -32,7 +32,15 @@
     </header>
 
     <main>
+
         <p>Value of input: <span id="inputval"></span></p>
+
+        <div class="demo-container">
+            <div class="demo-container__joystick" id="joystick"></div>
+            <div class="demo-container__base"></div>
+        </div>
+
+
     </main>
 
 
